Mobile Overflow Fix

--- a/src/css/bmalert.less
+++ b/src/css/bmalert.less
@@ -78,6 +78,13 @@
     box-shadow: 0px 7px 8px -4px rgba(0, 0, 0, 0.2), 0px 13px 19px 2px rgba(0, 0, 0, 0.14), 0px 5px 24px 4px rgba(0, 0, 0, 0.12);
     -webkit-box-shadow: 10px 10px 88px -24px rgba(0, 0, 0, 0.91);
     -moz-box-shadow: 10px 10px 88px -24px rgba(0, 0, 0, 0.91);
+
+    @media only screen and (max-width : 768px)
+    {
+        margin: 0 auto;
+        margin-top: 14rem;
+        max-width: 92%;
+    }
 }
 
 #spinner_container svg
